# LwM2M-espidf

./: .gitconfig  .gitignore  CMakeLists.txt  Dockerfile  flash.sh  run_qemu.sh  sdkconfig
.devcontainer/: devcontainer.json
components/anjay-esp-idf/: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md
components/anjay-esp-idf/config/anjay/: anjay_config.h
components/anjay-esp-idf/config/avsystem/coap/: avs_coap_config.h
components/anjay-esp-idf/config/avsystem/commons/: avs_commons_config.h  lwip-posix-compat.h
main/: CMakeLists.txt  anjay_config.c  anjay_config.h  default_config.h  default_config.h.in  esp_ot_config.h  firmware_update.c  firmware_update.h  main.c  utils.c  utils.h
main/objects/: device.c  light_control.c  objects.h  push_button.c  sensors.c  wlan.c
